src/tests/errors/lexing/test03.cmp
program main 
begin
    var 2x : int  (* wrong identifier *)
end 